public/css/style.css
/* ... */
.scroll--down {
  position: absolute;
  right: 150px;
  bottom: 5%; }

.likes--counter {
  padding: 5px 10px;
  background-color: #e6e6e6;
  color: #000000;
  float: right;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
  border-radius: 5px;
  font-size: 14px;
  display: inline-block; }
  @media all and (max-width: 39.9375em) {
    .likes--counter {
      float: none;
      margin: 10px 0; } }

input[type], textarea {
  padding: 5px 10px;
  background-color: #e6e6e6;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  -o-border-radius: 10px;
  border-radius: 10px;
  font-size: 14px;
  width: 100%;
  color: #454545; }
  input[type]:focus, textarea:focus {
    outline: none;
    border: solid 1px #dadada;
    -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
    -ms-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
    -o-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3); }

label {
  font-size: 14px;
  color: #b8b8b8; }

textarea {
  height: 150px;
  color: #454545; }

.form--login {
  max-width: 70%;
  margin: auto; }
  .form--login.page {
    max-width: 40%; }

.form--comment textarea {
  height: 100px !important; }

.form__wrapper {
  display: inline-block;
  width: 100%; }

.form__submit {
  max-width: 80%;
  margin: auto; }

.form__control {
  display: inline-block;
  width: 100%;
  margin-bottom: 15px;
  position: relative; }
  .form__control.required:before {
    position: absolute;
    content: '*';
    color: #ec1c24;
    top: 0;
    right: -10px; }

.form--search {
  max-width: 220px;
  float: right;
  width: 100%;
  position: relative;
  margin-bottom: 40px; }
  @media all and (max-width: 39.9375em) {
    .form--search {
      max-width: 100%; } }

.button--submit {
  position: absolute;
  top: 0;
  right: 0;
  margin-top: 0;
  padding: 0 10px; }

.image--responsive {
  max-width: 100%; }

.image--figured {
  position: relative;
  width: auto;
  display: inline-block;
  height: 100%;
  margin: 20px 0;
  width: 100%; }
  .image--figured:before {
    background: url(../images/photo-decoration.png) no-repeat bottom left, url(../images/logo-twb-small.png) no-repeat 20px 20px;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-size: 100%;
    background-size: contain, auto; }
  .image--figured img {
    width: 100%;
    border: 10px solid transparent;
    -moz-border-image: -moz-linear-gradient(bottom, #f4971e 0%, transparent 100%);
    -webkit-border-image: -webkit-linear-gradient(bottom, #f4971e 0%, transparent 100%);
    border-image: linear-gradient(to bottom, #f4971e 0%, transparent 100%);
    border-image-slice: 1; }

.decoration__wrapper--main {
  position: absolute;
  bottom: 0;
  left: 0;
  max-width: 660px;
  width: 100%;
  max-height: 500px;
  height: 100%;
  overflow: hidden;
  z-index: 0; }
  @media all and (max-width: 39.9375em) {
    .decoration__wrapper--main {
      display: none; } }

.decoration--land--desktop {
  position: absolute;
  width: 90%;
  height: 370px;
  bottom: 0;
  left: 0;
  z-index: 10;
  background: url(../images/characters/land.png) no-repeat bottom left;
  background-size: contain; }
  @media all and (max-height: 39.9375em) {
    .decoration--land--desktop {
      width: 80%;
      height: 300px; } }
  @media all and (max-width: 39.9375em) {
    .decoration--land--desktop {
      display: none; } }

@media all and (max-width: 39.9375em) {
  .decoration--land-mobile {
    position: absolute;
    display: inline-block;
    width: 100%;
    height: 250px;
    bottom: 0;
    left: 0;
    z-index: 10;
    background: url(../images/decoration-mobile.png) no-repeat bottom left;
    background-size: 100%; } }
.decoration {
  position: absolute;
  width: 100%;
  height: 370px;
  bottom: 0;
  left: 0; }
  @media all and (max-width: 39.9375em) {
    .decoration {
      height: 0px; } }

.decoration__character {
  position: absolute;
  display: inline-block; }
  @media all and (max-width: 39.9375em) {
    .decoration__character {
      display: none; } }

.character--duck {
  bottom: 35%;
  left: 15%;
  z-index: 11; }
.character--elephant {
  top: 28%;
  left: 35%;
  z-index: 11; }
.character--fish {
  bottom: 4%;
  right: 52%;
  z-index: 11; }
.character--turtle {
  top: 55%;
  right: 25%;
  z-index: 11; }
.character--butterfly {
  top: 15%;
  right: 20%;
  z-index: 11; }

.decoration--tree-small {
  top: 14%;
  right: 38%;
  z-index: 2; }
.decoration--tree-grass {
  bottom: 14%;
  right: 0;
  z-index: 2; }
.decoration--tree-big {
  top: -16%;
  left: 13%;
  z-index: 2; }
.decoration--grass {
  top: 8%;
  left: 23%;
  z-index: 2; }
.decoration--tree-grass {
  top: 22%;
  right: 10%;
  z-index: 4; }
.decoration--flower-white {
  top: -4%;
  left: 5%;
  z-index: 2; }
.decoration--cloud-01 {
  bottom: 30%;
  right: 0;
  z-index: 2; }
.decoration--cloud-02 {
  top: -35%;
  left: 5%;
  z-index: 1; }
.decoration--cloud-03 {
  top: -30%;
  left: 30%;
  z-index: 2; }
.decoration--flower-red-small {
  top: 27%;
  right: 35%;
  z-index: 2; }
.decoration--flower-red-big {
  bottom: 22%;
  right: 1%;
  z-index: 3; }

.list__inline {
  display: inline-block;
  list-style: none; }
  .list__inline li {
    float: left; }

.list__undot {
  list-style: none; }

.list--prize {
  text-align: left; }
  .list--prize li {
    margin-bottom: 15px;
    line-height: 1; }

.disabled > a {
  color: #777 !important;
  cursor: not-allowed;
  background-color: #fff !important;
  border-color: #ddd !important;
  border: 1px solid #ddd !important;
}

footer {
  background-color: #1e419b;
  padding: 24px 0; }
  @media all and (max-width: 39.9375em) {
    footer {
      padding: 5px 0; } }

@media all and (max-width: 39.9375em) {
  .list--foot {
    width: 100%;
    text-align: center; } }
.list--foot li {
  color: #6184cf;
  margin-right: 10px; }
/* ... */

